Fix the margin is visible at resizing

--- a/07_WindowTheme/WindowChrome/MainWindow.xaml
+++ b/07_WindowTheme/WindowChrome/MainWindow.xaml
@@ -11,7 +11,10 @@
         Foreground="{StaticResource ForegroundBrushKey}"
         UseLayoutRounding="True"
         FontFamily="Segoe UI"
-        TextOptions.TextFormattingMode="Display" >
+        TextOptions.TextFormattingMode="Display"
+        SizeToContent="WidthAndHeight"
+        AllowsTransparency="True"
+        WindowStyle="None" >
     <!-- 
         Icon="small.ico"
     -->
