--- a/07_WindowTheme/WindowChrome/MainWindow.xaml
+++ b/07_WindowTheme/WindowChrome/MainWindow.xaml
@@ -14,7 +14,8 @@
         TextOptions.TextFormattingMode="Display"
         SizeToContent="WidthAndHeight"
         AllowsTransparency="True"
-        WindowStyle="None" >
+        WindowStyle="None"
+        StateChanged="Window_StateChanged" >
     <!-- 
         Icon="small.ico"
     -->
@@ -55,174 +56,163 @@
                       GlassFrameThickness="0,0,0,10"/>
     </WindowChrome.WindowChrome>
 
-    <Border BorderThickness="0">
-        <!--
-            ウィンドウの外枠を狭めるため無効化した
-            BorderThickness="{Binding WindowState,
-                                      Converter={StaticResource BorderThicknessByWindowStateConverterKey},
-                                      ElementName=MainWindow1}"
-            BorderBrush="{Binding IsActive,
-                          Converter={StaticResource WindowBorderBrushConverterKey},
-                          ConverterParameter={StaticResource CaptionBarActiveBorderBrushKey},
-                          RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-        -->
-        <Grid>
-            <!-- 上からタイトルバー、コンテンツ、フッター -->
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+    <Grid x:Name="LayoutRoot" >
+        <!-- 上からタイトルバー、コンテンツ、フッター -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-            <!-- タイトルバー -->
-            <Grid Grid.Row="0" >
-                <Grid.Style>
-                    <Style TargetType="{x:Type Grid}" >
+        <!-- タイトルバー -->
+        <Grid Grid.Row="0" >
+            <Grid.Style>
+                <Style TargetType="{x:Type Grid}" >
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
+                                                        RelativeSource={RelativeSource FindAncestor,
+                                                        AncestorType={x:Type v:MainWindow}}}"
+                                        Value="True">
+                            <Setter Property="Background"
+                                    Value="{StaticResource CaptionBarActiveBorderBrushKey}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
+                                                        RelativeSource={RelativeSource FindAncestor,
+                                                        AncestorType={x:Type v:MainWindow}}}"
+                                        Value="False">
+                            <Setter Property="Background"
+                                    Value="{StaticResource InactiveBorderBrushKey}" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+
+            <!-- 左からアイコン、タイトル、コマンドボタン -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- アイコンを表示します
+            <Image Grid.Column="0"
+                    Margin="5"
+                    Source="{Binding Icon, ElementName=MainWindow1}"/>
+                -->
+
+            <!-- ウィンドウタイトルを表示します -->
+            <TextBlock Grid.Column="1"
+                        x:Name="CaptionTitle"
+                        Margin="5,0,0,0"
+                        Text="{Binding Title, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                        TextTrimming="CharacterEllipsis"
+                        FontFamily="Segoe UI Light"
+                        FontSize="18"
+                        Padding="5,0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center">
+                <TextBlock.Style>
+                    <Style TargetType="{x:Type TextBlock}">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
-                                                           RelativeSource={RelativeSource FindAncestor,
-                                                           AncestorType={x:Type v:MainWindow}}}"
-                                         Value="True">
-                                <Setter Property="Background"
-                                        Value="{StaticResource CaptionBarActiveBorderBrushKey}" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
-                                                           RelativeSource={RelativeSource FindAncestor,
-                                                           AncestorType={x:Type v:MainWindow}}}"
-                                         Value="False">
-                                <Setter Property="Background"
-                                        Value="{StaticResource InactiveBorderBrushKey}" />
+                                                            RelativeSource={RelativeSource FindAncestor,
+                                                            AncestorType={x:Type v:MainWindow}}}"
+                                            Value="False">
+                                <Setter Property="Foreground"
+                                        Value="{StaticResource InactiveForegroundBrushKey}" />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
-                </Grid.Style>
+                </TextBlock.Style>
+            </TextBlock>
 
-                <!-- 左からアイコン、タイトル、コマンドボタン -->
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-
-                <!-- アイコンを表示します
-                <Image Grid.Column="0"
-                       Margin="5"
-                       Source="{Binding Icon, ElementName=MainWindow1}"/>
-                 -->
-
-                <!-- ウィンドウタイトルを表示します -->
-                <TextBlock Grid.Column="1"
-                           x:Name="CaptionTitle"
-                           Margin="5,0,0,0"
-                           Text="{Binding Title, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                           TextTrimming="CharacterEllipsis"
-                           FontFamily="Segoe UI Light"
-                           FontSize="18"
-                           Padding="5,0"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
-                                                               RelativeSource={RelativeSource FindAncestor,
-                                                               AncestorType={x:Type v:MainWindow}}}"
-                                             Value="False">
-                                    <Setter Property="Foreground"
-                                            Value="{StaticResource InactiveForegroundBrushKey}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-
-                <!-- 最小化、最大化、閉じるボタンを設置します -->
-                <Grid Grid.Column="2">
-                    <StackPanel Orientation="Horizontal"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Center">
-                        <!-- 最小化ボタン
-                                Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                ToolTip="最小化"
-                        -->
-                        <Button Content="0"
-                                Style="{StaticResource CustomCaptionButtonBaseKey}"
-                                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
-                                Command="{x:Static SystemCommands.MinimizeWindowCommand}" />
-                        <!-- 最大化ボタン
-                                IsEnabled="{Binding ResizeMode, Converter={StaticResource MaximizeCaptionButtonEnableConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                ToolTip="{Binding WindowState, Converter={StaticResource MaximizeCaptionButtonTooltipConverter}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                        -->
-                        <Button Content="{Binding WindowState,Converter={StaticResource MaximizeCaptionButtonContentConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                Style="{StaticResource CustomCaptionButtonBaseKey}"
-                                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
-                                Command="{x:Static SystemCommands.MaximizeWindowCommand}"/>
-                        <!-- 閉じるボタン
-                                ToolTip="閉じる"
-                        -->
-                        <Button Content="r"
-                                Style="{StaticResource CustomCaptionButtonBaseKey}"
-                                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
-                                Command="{x:Static SystemCommands.CloseWindowCommand}"/>
-                    </StackPanel>
-                </Grid>
+            <!-- 最小化、最大化、閉じるボタンを設置します -->
+            <Grid Grid.Column="2">
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                    <!-- 最小化ボタン
+                            Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                            ToolTip="最小化"
+                    -->
+                    <Button Content="0"
+                            Style="{StaticResource CustomCaptionButtonBaseKey}"
+                            Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                            Command="{x:Static SystemCommands.MinimizeWindowCommand}" />
+                    <!-- 最大化ボタン
+                            IsEnabled="{Binding ResizeMode, Converter={StaticResource MaximizeCaptionButtonEnableConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                            Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                            ToolTip="{Binding WindowState, Converter={StaticResource MaximizeCaptionButtonTooltipConverter}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                    -->
+                    <Button Content="{Binding WindowState,Converter={StaticResource MaximizeCaptionButtonContentConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                            Style="{StaticResource CustomCaptionButtonBaseKey}"
+                            Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                            Command="{x:Static SystemCommands.MaximizeWindowCommand}"/>
+                    <!-- 閉じるボタン
+                            ToolTip="閉じる"
+                    -->
+                    <Button Content="r"
+                            Style="{StaticResource CustomCaptionButtonBaseKey}"
+                            Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                            Command="{x:Static SystemCommands.CloseWindowCommand}"/>
+                </StackPanel>
             </Grid>
-
-            <!-- コンテンツ -->
-            <TabControl Grid.Row="1"
-                        Style="{StaticResource MainTabStyleKey}">
-
-                <TabItem>
-                    <TabItem.Header>
-                        <TextBlock Style="{StaticResource MainTabHeaderTextStyleKey}"
-                                   Text="Tab1" />
-                    </TabItem.Header>
-                    <StackPanel>
-                        <TextBlock Text="TextBlock"
-                                   Foreground="{StaticResource ForegroundBrushKey}"/>
-
-                        <Button Margin="5"
-                                Content="Button" />
-
-                    </StackPanel>
-                </TabItem>
-
-                <TabItem>
-                    <TabItem.Header>
-                        <TextBlock Style="{StaticResource MainTabHeaderTextStyleKey}"
-                                   Text="Tab2" />
-                    </TabItem.Header>
-                    <WrapPanel ToolTip="RadioButtons">
-                        <RadioButton Content="b1" />
-                        <RadioButton Content="b2" />
-                        <RadioButton Content="b3" IsChecked="True" />
-                        <RadioButton Content="b4" />
-                        <RadioButton Content="b5" />
-                    </WrapPanel>
-                </TabItem>
-
-            </TabControl>
-
-            <!-- フッター -->
-            <Grid Grid.Row="2"
-                  Background="{StaticResource AccentActiveBrushKey}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Grid.Column="0"
-                           Margin="5,0,0,0"
-                           Text="Footer"
-                           Foreground="{StaticResource AccentForegroundBrushKey}"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Center"
-                           Padding="3" />
-
-                <ContentControl Style="{StaticResource ResizeGripKey}"/>
-            </Grid>
-
         </Grid>
-    </Border>
+
+        <!-- コンテンツ -->
+        <TabControl Grid.Row="1"
+                    Style="{StaticResource MainTabStyleKey}">
+
+            <TabItem>
+                <TabItem.Header>
+                    <TextBlock Style="{StaticResource MainTabHeaderTextStyleKey}"
+                                Text="Tab1" />
+                </TabItem.Header>
+                <StackPanel>
+                    <TextBlock Text="TextBlock"
+                                Foreground="{StaticResource ForegroundBrushKey}"/>
+
+                    <Button Margin="5"
+                            Content="Button" />
+
+                </StackPanel>
+            </TabItem>
+
+            <TabItem>
+                <TabItem.Header>
+                    <TextBlock Style="{StaticResource MainTabHeaderTextStyleKey}"
+                                Text="Tab2" />
+                </TabItem.Header>
+                <WrapPanel ToolTip="RadioButtons">
+                    <RadioButton Content="b1" />
+                    <RadioButton Content="b2" />
+                    <RadioButton Content="b3" IsChecked="True" />
+                    <RadioButton Content="b4" />
+                    <RadioButton Content="b5" />
+                </WrapPanel>
+            </TabItem>
+
+        </TabControl>
+
+        <!-- フッター -->
+        <Grid Grid.Row="2"
+                Background="{StaticResource AccentActiveBrushKey}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0"
+                        Margin="5,0,0,0"
+                        Text="Footer"
+                        Foreground="{StaticResource AccentForegroundBrushKey}"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Padding="3" />
+
+            <ContentControl Style="{StaticResource ResizeGripKey}"/>
+        </Grid>
+
+    </Grid>
+
 </Window>
