--- a/08_ImageFunctions/ZoomThumbCodeBehind/Views/ImageScrollViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbCodeBehind/Views/ImageScrollViewer.xaml
@@ -95,7 +95,8 @@
                 Margin="10,10,0,0"
                 Visibility="Collapsed"
                 Width="{Binding ElementName=Thumbnail, Path=ActualWidth}"
-                Height="{Binding ElementName=Thumbnail, Path=ActualHeight}" >
+                Height="{Binding ElementName=Thumbnail, Path=ActualHeight}"
+                PreviewMouseWheel="ThumbCanvas_PreviewMouseWheel" >
 
             <Image x:Name="Thumbnail"
                    Width="100"
