Add Thumb MinSize

--- a/08_ImageFunctions/ZoomThumbCodeBehind/Views/ImageScrollViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbCodeBehind/Views/ImageScrollViewer.xaml
@@ -111,6 +111,8 @@
             </Path>
 
             <Thumb x:Name="ThumbViewport"
+                   MinHeight="4"
+                   MinWidth="4"
                    DragDelta="OnDragDelta" >
                 <Thumb.Template>
                     <ControlTemplate TargetType="{x:Type Thumb}">
