--- a/08_ImageFunctions/ZoomThumbCodeBehind/Views/MainWindow.xaml
+++ b/08_ImageFunctions/ZoomThumbCodeBehind/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="ZoomThumb"
+        Title="ZoomThumbCodeBehind"
         Height="400" Width="600">
 
     <Grid AllowDrop="True" >
